--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,23 @@
-* {
+html, body {
+	-webkit-box-sizing:	border-box;
+	   -moz-box-sizing: border-box;
+			box-sizing: border-box;
+	height: 100%;
+}
+
+*, *:before, *:after {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing:    border-box;
-    box-sizing:         border-box;
+    -webkit-box-sizing:	inherit;
+       -moz-box-sizing: inherit;
+            box-sizing: inherit;
+}
+
+.wrapper {
+	display: -webkit-flex;
+	display: 		 flex;
+	flex-direction: column;
+	height: 100%;
 }
 
 header, footer, nav, body {
@@ -14,14 +28,28 @@ header, footer, nav, body {
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.wrapper {
-    display: -webkit-flex;
-    display: flex;
+#map {
+	-webkit-flex: 5 auto;
+            flex: 5 auto;
+    min-height: 250px;
+    height: inherit;
 }
 
-#map{
-    -webkit-flex: 1;
-            flex: 1;
-    min-height: 750px;
-    height: inherit;
+.legend {
+    line-height: 18px;
+    color: #555;
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+.legend i {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
 }
