--- a/css/style.css
+++ b/css/style.css
@@ -44,17 +44,6 @@ header, footer, nav, body {
     padding: 10px;
 }
 
-.originMarker {
-    stroke: none;
-    fill: hsla(187.6,76.5%,36.7%,0.2);
-    fill-opacity: 1;
-}
-.destinationMarker {
-    stroke: none;
-    fill: hsla(40.9,96.3%,57.3%,0.2);
-    fill-opacity: 1;
-}
-
 .legend {
     line-height: 18px;
     color: #555;
@@ -65,6 +54,7 @@ header, footer, nav, body {
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     border-radius: 5px;
 }
+
 .legend i {
     width: 15px;
     height: 15px;
@@ -72,4 +62,26 @@ header, footer, nav, body {
     float: left;
     margin-right: 8px;
     opacity: 0.7;
+}
+
+.mapMarker {
+    stroke: none;
+    fill-opacity: 1;
+}
+.routeMarker{
+	border-radius: 100%;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	line-height: 30px;
+  	color: white;
+  	font-size: 23pt;
+}
+.icon-origin {
+	fill: hsla(187.6,76.5%,36.7%,0.2);
+  	background: hsla(187.6,76.5%,36.7%,1);
+}
+.icon-destination {
+	fill: hsla(40.9,96.3%,57.3%,0.2);
+  	background: hsla(40.9,96.3%,57.3%,1);
 }
