--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ header, footer, nav, body {
 
 .mapMarker {
     stroke: none;
-    fill-opacity: 1;
+    fill-opacity: 0.3;
 }
 .routeMarker{
 	border-radius: 100%;
@@ -77,11 +77,21 @@ header, footer, nav, body {
   	color: white;
   	font-size: 23pt;
 }
-.icon-origin {
-	fill: hsla(187.6,76.5%,36.7%,0.2);
+.origin {
+	fill: #3AB1CF;
   	background: hsla(187.6,76.5%,36.7%,1);
 }
-.icon-destination {
-	fill: hsla(40.9,96.3%,57.3%,0.2);
+.destination {
+	fill: #434343;
   	background: hsla(40.9,96.3%,57.3%,1);
+}
+
+.axis path,
+.axis line {
+	fill: none;
+	stroke: black;
+	shape-rendering: crispEdges;
+}
+.axis text {
+	font-size: 9px;
 }
