--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,24 @@
-html, body {
-	-webkit-box-sizing:	border-box;
-	   -moz-box-sizing: border-box;
-			box-sizing: border-box;
-	height: 100%;
+body, html {
+    width:100%;
+    height:100%;
 }
 
-*, *:before, *:after {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing:	inherit;
-       -moz-box-sizing: inherit;
-            box-sizing: inherit;
-}
-
-.wrapper {
-	display: -webkit-flex;
-	display: 		 flex;
-	flex-direction: row;
-	height: 100%;
-    margin: 30px;
-}
-
-header, footer, section {
-    width: 90%;
-    color: rgba(42,42,42,.5);
-    background: white;
-    font-family: 'Josefin Sans', sans-serif;
-    margin-left: auto;
-    margin-right:auto;
-}
-
-header {
-    position:absolute;
-    top: 0;
-    height: 3em;
-}
-
-section {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 10;
-    height: auto;
-    margin-top: 3em;
-    margin-bottom: 1.6em;
-    overflow: hidden;
-}
-
-footer {
-    position:absolute;
-    bottom: 0;
-    height: 1.6em;
-
+body {
+    padding-top: 50px;
 }
 
 #map {
-	width: 100%;
-    min-height: 250px;
-    height: 70%;
+    min-height: 400px;
 }
 
 #timeline {
-	width: 100%;
-    min-height: 100px;
-    height: 25%;
-    padding: 10px;
+    min-height: 150px;
 }
 
 .legend {
-    line-height: 18px;
+    line-height: 10px;
     color: #555;
     padding: 6px 8px;
-    font: 14px/16px Arial, Helvetica, sans-serif;
     background: white;
     background: rgba(255,255,255,0.8);
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -81,9 +26,9 @@ footer {
 }
 
 .legend i {
-    width: 15px;
-    height: 15px;
-    border-radius: 15px;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
     float: left;
     margin-right: 8px;
     opacity: 0.7;
