--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     padding-top: 50px;
 }
 
+footer{
+    text-align: right;
+}
+
 #map {
     min-height: 400px;
 }
@@ -15,6 +19,7 @@ body {
     min-height: 150px;
 }
 
+/* map legend */
 .legend {
     line-height: 10px;
     color: #555;
@@ -34,33 +39,28 @@ body {
     opacity: 0.7;
 }
 
+/* map markers */
 .mapMarker {
     stroke: none;
     fill-opacity: 0.3;
 }
-.routeMarker{
-	border-radius: 100%;
-	width: 30px;
-	height: 30px;
-	text-align: center;
-	line-height: 30px;
-  	color: white;
-  	font-size: 23pt;
-}
-.origin {
-	fill: #3AB1CF;
-  	background: hsla(187.6,76.5%,36.7%,1);
-}
+
 .mapMarker:hover {
     stroke: orange;
     fill-opacity: 1;
 }
-.destination {
-	fill: #434343;
-  	background: hsla(40.9,96.3%,57.3%,1);
+
+.origin {
+	fill: #3AB1CF;
+  	/*background: hsla(187.6,76.5%,36.7%,1);*/
 }
 
-.yaxis path,
+.destination {
+	fill: #434343;
+  	/*background: hsla(40.9,96.3%,57.3%,1);*/
+}
+
+/* timeline design */
 .xaxis line {
 	fill: none;
 	stroke: #ccc;
@@ -77,11 +77,12 @@ body {
 }
 
 rect:hover {
-    fill: orange;
+    stroke: orange;
+    stroke-width: 2px;
 }
 
 /* scale chart with on window resize */
-.svg-container {
+.chart-container {
     display: inline-block;
     position: relative;
     width: 100%;
@@ -89,7 +90,7 @@ rect:hover {
     vertical-align: top;
     overflow: hidden;
 }
-.svg-content-responsive {
+.chart-content-responsive {
     display: inline-block;
     position: absolute;
     top: 10px;
