--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,19 @@ footer{
     opacity: 0.7;
 }
 
+.leaflet-control-minZoomIndicator {
+    font-size: 1em;
+    background: #ffffff;
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 10px;
+    padding: 1px 15px;
+    opacity: 0.5;
+}
+
 /* map markers */
 .mapMarker {
     stroke: none;
-    fill-opacity: 0.3;
+    fill-opacity: 0.5;
 }
 
 .mapMarker:hover {
